# gitbook-worker

./: .gitignore  AGENTS.md  BESTANDSAUFNAHME.md  CITATION.cff  HANDBOOK.md  LICENSE  LICENSE-CODE  LICENSE-FONTS  MANIFEST.in  README.md  SPRINT_PLAN.md  book.json  build-pdf.ps1  build-pdf.sh  content.yaml  package-lock.json  publish.yml  pytest.ini  requirements.txt  setup.cfg  test-fallback-api.tex  test_output.txt  test_svglib_pollution.py
.github/: README.md  agents.md  gh_paths.py  pyproject.toml
.github/fonts/erda-ccby-cjk/: CHANGELOG.md  README.md  requirements.txt
.github/gitbook_worker/: README.md  __init__.py
.github/gitbook_worker/defaults/: README.md  docker_config.yml  frontmatter.yml
.github/gitbook_worker/docs/: DOCKER_DYNAMIC_CONFIG_BEST_PRACTICE.md  FONT-CACHE-FIX.md  docker-names-MIGRATION.md  docker-names-README.md  docker-names-SUMMARY.md  docker_config.yml.example  required-latex-packages.md
.github/gitbook_worker/scripts/: README.md  build-pdf.ps1  build-pdf.sh  diagnose-docker.ps1  docker-names.ps1  docker-names.sh  run-in-docker.ps1  run-in-docker.sh
.github/gitbook_worker/tests/: README.md  TEST_COVERAGE_REPORT.md  __init__.py  conftest.py  test_a1_pdf.py  test_appendix_layout_inspector.py  test_content_discovery.py  test_csv_converter.py  test_docker_container.py  test_documents_publishing.py  test_font_config.py  test_full_orchestrator_pipeline.py  test_gitbook_style.py  test_markdown_combiner.py  test_orchestrator_readme_docker.py  test_paper_info.py  test_path_resolution.py  test_pdf_integration.py  test_pipeline.py  test_preprocess_md.py  test_publisher.py  test_set_publish_flag.py  test_smart_book.py  test_smart_git.py  test_smart_manage_publish_flags.py  test_smart_manifest.py  (+2 more)
.github/poc-standalone-package/: .gitignore  README.md  pyproject.toml
.github/workflows/: README.md  orchestrator.yml  test.yml
gitbook_worker/: README.md  __init__.py  gh_paths.py  mypy.ini  requirements.txt  setup.cfg
gitbook_worker/adapters/: __init__.py
gitbook_worker/core/: __init__.py
gitbook_worker/defaults/: README.md  docker_config.yml  fonts.yml  readme.yml  smart.yml
gitbook_worker/docs/: README.md
gitbook_worker/harness/: emoji-harness.md  readme.md
gitbook_worker/scripts/: README.md  build-docker-dynamic.ps1  build-docker-dynamic.sh  build-pdf.ps1  build-pdf.sh  diagnose-docker.ps1  docker-names.ps1  docker-names.sh  run-in-docker.ps1  run-in-docker.sh
gitbook_worker/tests/: README-CONFIG-AWARE-TESTING.md  README.md  conftest.py  test-coverage-report.md  test_ai_references.py  test_appendix_layout_inspector.py  test_config_completeness.py  test_csv_converter.py  test_docker_container.py  test_documents_publishing.py  test_editorial_quality.py  test_emoji_color_regression.py  test_emoji_visual_check.py  test_erda_font_coverage_stats.py  test_exit_codes.py  test_font_attribution.py  test_font_config.py  test_font_fallback_guard.py  test_font_fallback_rawfeature.py  test_frontmatter_checker.py  test_full_orchestrator_pipeline.py  test_gh_paths.py  test_gitbook_style.py  test_language_context.py  test_language_sample_long_blocks.py  test_latex_escaping.py  test_markdown_combiner.py  test_multilingual_layout.py  test_orchestrator_readme_docker.py  test_orchestrator_validate.py  test_packaging_metadata.py  test_path_resolution.py  test_pdf_integration.py  test_pdf_options_passthrough.py  test_pdf_validator.py  test_pipeline.py  test_preprocess_md.py  test_profile_link_audit.py  test_project_metadata_defaults.py  test_publisher.py  (+6 more)
gitbook_worker/tools/: README.md  demo_smart_merge.py  logging_config.py  requirements.txt  run-emoji-harness.sh
(+740 files in other folders)
