[metadata]
name = gitbook-worker
version = 2.0.0
description = GitBook publishing and QA toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = CC-BY-SA-4.0

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    beautifulsoup4
    emoji
    markdown
    matplotlib
    numpy
    pandas
    pathvalidate
    pypandoc
    pyyaml
    reportlab
    requests
    svglib
    tqdm

# Ensure gh_paths (and other helpers) are included in the distribution package.
[options.packages.find]
where = .
include = gitbook_worker*

[options.entry_points]
console_scripts =
    gitbook-worker = gitbook_worker.tools.workflow_orchestrator.orchestrator:main
    gitbook-worker-fonts = gitbook_worker.tools.publishing.fonts_cli:main
