[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erda-workflow-tools"
version = "0.1.0"
description = "Workflow automation tools for GitBook-based publishing pipelines (Proof of Concept)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ERDA Book Project", email = "info@erda-project.org"}
]
keywords = ["gitbook", "pandoc", "publishing", "markdown", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "build>=1.0",
]

[project.scripts]
erda-workflow-tools = "erda_workflow_tools.__main__:main"

[project.urls]
Homepage = "https://github.com/Rob9999/erda-book"
Repository = "https://github.com/Rob9999/erda-book"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
